fix: Add functionality to toggle search modal visibility on Search click

--- a/assets/base.css
+++ b/assets/base.css
@@ -2575,7 +2575,9 @@ input[type='checkbox'] {
 }
 
 .header__icon {
+  display: flex;
   color: rgb(var(--color-foreground));
+  text-decoration: none;
 }
 
 .header__icon span {
